--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,16 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "illuminate/view": "^8.0",
         "laravel/lumen-framework": "^8.3.1"
     },
+   
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.23",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.5.10"
-    },
+        "phpunit/phpunit": "^9.5.10",
+        "symfony/deprecation-contracts": "^2.2|^3.0"
+    }, 
     "autoload": {
         "psr-4": {
             "App\\": "app/",
