--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "bootstrap": "^5.3.2",
     "datatables.net": "^1.13.8",
+    "datatables.net-bs4": "^1.13.8",
+    "datatables.net-buttons-bs4": "^2.4.2",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
+    "pdfmake": "^0.2.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
