--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "datatables.net": "^1.13.8",
     "datatables.net-bs4": "^1.13.8",
     "datatables.net-buttons-bs4": "^2.4.2",
+    "datatables.net-responsive-bs4": "^2.5.0",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "pdfmake": "^0.2.8",
